--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ branches:
 before_script:
   - npm install yaspeller -g
 script:
-  - find rustbook-ru -iname '*.md' | xargs yaspeller -c common-configs/.yaspellerrc
+  - git log --name-only -n1 --oneline | grep "^rustbook-en/.*/*.md" --color=never | xargs yaspeller -c common-configs/.yaspellerrc
