--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: node_js
 node_js:
  - node
 cache: npm
+branches:
+  only:
+  - master
 before_script:
   - npm install yaspeller -g
 script:
