--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
     - uses: actions/checkout@master
       with:
         submodules: recursive
-    - run: npm install -f yaspeller
+    - run: npm install -g yaspeller
     - run: git show -m --name-only -1 --format="format:" | grep --color=never '*.md' | xargs yaspeller -c common-configs/.yaspellerrc
