--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
       with:
         submodules: recursive
     - run: npm install yaspeller
-    - run: git show -m --name-only -1 --format="format:"
-    - run: git show -m --name-only -1 --format="format:" | grep --color=never '*.md' | xargs node_modules/.bin/yaspeller -c common-configs/.yaspellerrc
+    - run: git show -m --name-only -1 --format="format:" | grep --color=never -i '.md'
+    - run: git show -m --name-only -1 --format="format:" | grep --color=never -i '.md' | xargs node_modules/.bin/yaspeller -c common-configs/.yaspellerrc
